# Progetto_PCS_2024

./: README.md
Appunti/: aggiuntavertice.txt  bubblesort.txt  coutintersections.txt  mesh.txt  ottimizzazione.txt  tracesfinder.txt
Documentazione/: UML.txt
Project/: CMakeLists.txt  main.cpp  main_TEST.cpp
Project/DFN/: FR2_data.txt  FR4_data.txt  FR5_data.txt  FR7_data.txt
Project/TestingParaview/Code/src/: CMakeLists.txt
Project/src/: CMakeLists.txt  Fractures.hpp  PolygonalMesh.hpp  Traces.hpp  Utils.cpp  Utils.hpp
Project/test/: CMakeLists.txt  Test.hpp
